# mcp-simple-todo

./: .env  .env.example  =4.8.0  README.md  client.py  pyproject.toml  requirements.txt  simple.py  simple_todo.py  todo.py
